--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "google/recaptcha": "~1.1",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "google/recaptcha": "~1.1"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "codeception/codeception": "^2.3",
